fix non-atomic publishing of different version